--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 altgraph==0.17.3
+asttokens==2.2.1
 auto-py-to-exe==2.32.0
+backcall==0.2.0
 blis==0.7.9
 bottle==0.12.25
 bottle-websocket==0.2.9
@@ -9,13 +11,18 @@ cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+comm==0.1.3
 confection==0.0.4
 cryptography==39.0.2
 cymem==2.0.7
+debugpy==1.6.7
+decorator==5.1.1
 Deprecated==1.2.13
 distlib==0.3.6
 Eel==0.14.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
 en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.5.0/en_core_web_trf-3.5.0-py3-none-any.whl#sha256=8902305d2ced83d98a8e88efd93ea8970a70dda9bb24b0024a8b798d1cc913d5
+executing==1.2.0
 filelock==3.11.0
 future==0.18.3
 gcloud==0.18.3
@@ -26,34 +33,51 @@ greenlet==2.0.2
 httplib2==0.21.0
 huggingface-hub==0.13.4
 idna==3.4
+ipykernel==6.22.0
+ipython==8.12.0
+jedi==0.18.2
 Jinja2==3.1.2
+joblib==1.2.0
+jupyter_client==8.2.0
+jupyter_core==5.3.0
 jwcrypto==1.4.2
 langcodes==3.3.0
 MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
 mpmath==1.3.0
 murmurhash==1.0.9
+nest-asyncio==1.5.6
 networkx==3.1
+nltk==3.8.1
 numpy==1.24.2
 oauth2client==4.1.3
 packaging==23.1
+parso==0.8.3
 pathy==0.10.1
 pefile==2023.2.7
+pickleshare==0.7.5
 platformdirs==3.2.0
 preshed==3.0.8
+prompt-toolkit==3.0.38
 protobuf==4.22.1
 psutil==5.9.4
+pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pycryptodome==3.17
 pydantic==1.10.7
+Pygments==2.15.1
 pyinstaller==5.8.0
 pyinstaller-hooks-contrib==2023.0
 pyparsing==3.0.9
 Pyrebase4==4.6.0
+python-dateutil==2.8.2
 python-jwt==4.0.0
+pywin32==306
 pywin32-ctypes==0.2.0
 PyYAML==6.0
+pyzmq==25.0.2
 regex==2023.3.23
 requests==2.28.2
 requests-toolbelt==0.10.1
@@ -66,17 +90,21 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.4
 spacy-transformers==1.2.2
 srsly==2.4.6
+stack-data==0.6.2
 sympy==1.11.1
 thinc==8.1.9
 tokenizers==0.13.3
 torch==2.0.0
+tornado==6.3
 tqdm==4.65.0
+traitlets==5.9.0
 transformers==4.26.1
 typer==0.7.0
 typing_extensions==4.5.0
 urllib3==1.26.15
 virtualenv==20.21.0
 wasabi==1.1.1
+wcwidth==0.2.6
 whichcraft==0.6.1
 wrapt==1.15.0
 zope.event==4.6
